Minor fix with html/body overflow-x

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 html, body { 
-  @apply h-screen;
+  @apply h-screen overflow-x-hidden;
 }
 
 body {
